...
        // Show review screen and allow option to recruit character to squad.
        let reviewViewController = self.storyboard!.instantiateViewController(withIdentifier: "ReviewViewController") as! ReviewViewController

        // Pass required parameters.
        let character = characters[indexPath.row]
        reviewViewController.character = character
        reviewViewController.question = "Recruit?"
        reviewViewController.yesIsEnabled = squad.canRecruite(character: character)
        reviewViewController.yesCompletionHandler = {
            SquadMember.recruitToSquad(character: character)
            self.loadSquad()
        }
        
...
